# ai-enhanced-audio-book

./: LICENSE  README.md
src/Part1_GettingStarted/001_hello_cmake/: CMakeLists.txt
src/Part1_GettingStarted/002_minimal_plugin_cmake/: CMakeLists.txt
src/Part1_GettingStarted/003a_sineplugin/: CMakeLists.txt
src/Part1_GettingStarted/003b_sineplugin_midi/: CMakeLists.txt  README.md
src/Part1_GettingStarted/003c_sineplugin_env/: CMakeLists.txt  README.md
src/Part1_GettingStarted/004a_fmplugin-basic/: README.md
src/Part1_GettingStarted/004b_fmplugin-params/: CMakeLists.txt  README.md
src/Part1_GettingStarted/004c_fmplugin-params-drone/: README.md
src/Part1_GettingStarted/005_minimal_libtorch/: README.md
src/Part1_GettingStarted/005b_minimal_libtorch/: CMakeLists.txt
src/Part1_GettingStarted/005b_minimal_libtorch/src/: main.cpp
src/Part1_GettingStarted/008_libtorch_and_juce/: CMakeLists.txt  README.md
src/Part1_GettingStarted/008_libtorch_and_juce/src/: PluginProcessor.cpp
src/Part2_MetaController/006a_libtorch_regressor/: CMakeLists.txt
src/Part2_MetaController/006b_non-linear_regression/: CMakeLists.txt
src/Part2_MetaController/006b_non-linear_regression/src/: main_linear.cpp  main_nonlinear.cpp
src/Part2_MetaController/007_fmplugin_superknob/: CMakeLists.txt  README.md
src/Part2_MetaController/009a_fmplugin_torchknob/: CMakeLists.txt
src/Part2_MetaController/009a_fmplugin_torchknob/src/: NeuralNetwork.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/Part2_MetaController/009b_fmplugin_torchknob_nn_class/: CMakeLists.txt
src/Part2_MetaController/010a_plugin_host_starter/: CMakeLists.txt
src/Part2_MetaController/010b_plugin_host_basic/: CMakeLists.txt
src/Part2_MetaController/010b_plugin_host_basic/src/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
src/Part2_MetaController/010c_plugin_host_graph/: CMakeLists.txt
src/Part2_MetaController/010d_plugin_host_show_ui/: CMakeLists.txt
src/Part2_MetaController/010e_metacontroller/: CMakeLists.txt  README.md
src/Part2_MetaController/host_works_in_juce_8/: CMakeLists.txt  README.md
src/Part3_Improviser/020a_markov-starter/: CMakeLists.txt  README.md
src/Part3_Improviser/020a_markov-starter/src/: main.cpp
src/Part3_Improviser/020b_juce-markov-starter/: CMakeLists.txt
src/Part3_Improviser/020d_midi_markov_ioi/: README.md
src/Part3_Improviser/020e_midi_markov_duration/: README.md
src/Part3_Improviser/020f_chord_detector/: CMakeLists.txt  README.md
src/Part3_Improviser/020g_midi_markov_poly/: README.md
src/Part3_Improviser/020h_midi_markov_vel/: CMakeLists.txt  README.md
src/Part3_Improviser/020h_midi_markov_vel/src/: ChordDetector.h  MarkovExperiments.cpp  PluginProcessor.cpp  PluginProcessor.h
src/Part3_Improviser/020i_midi_markov_time/: CMakeLists.txt  README.md
src/Part3_Improviser/MarkovModelCPP/: CMakeLists.txt  LICENSE  README.md
src/Part3_Improviser/MarkovModelCPP/src/: MarkovChain.cpp  MarkovChain.h  MarkovManager.cpp  MarkovManager.h  MarkovProfile.cpp  MarkovTest.cpp  thread_test.cpp
src/Part4_NeuralFX/029a_three_pole/: CMakeLists.txt
src/Part4_NeuralFX/031a_tinywav/: CMakeLists.txt  README.md
src/Part4_NeuralFX/031b_convolution_time-domain/: CMakeLists.txt
src/Part4_NeuralFX/031c_convolution_time-domain-speed/: CMakeLists.txt  README.md
src/Part4_NeuralFX/032c_convolution_freq-domain/: CMakeLists.txt  README.md
src/Part4_NeuralFX/032d_convolution_freq-domain/: CMakeLists.txt
src/Part4_NeuralFX/032e_convolution_freq-domain/: CMakeLists.txt
src/Part4_NeuralFX/033a_convolution_JUCE/: CMakeLists.txt  README.md
src/Part4_NeuralFX/034a_iir_basic/: CMakeLists.txt  README.md
src/Part4_NeuralFX/034b_iir_general/: CMakeLists.txt  README.md
src/Part4_NeuralFX/034c_iir_coeffs/: CMakeLists.txt  README.md
src/Part4_NeuralFX/034d_iir_JUCE/: CMakeLists.txt  README.md
src/Part4_NeuralFX/035a_waveshaper_basic/: CMakeLists.txt
src/Part4_NeuralFX/035b_waveshaper_JUCE/: CMakeLists.txt  README.md
src/Part4_NeuralFX/035c_waveshaper_JUCE_DSP/: CMakeLists.txt  README.md
src/Part4_NeuralFX/035d_JUCE_processor_chain/: CMakeLists.txt  README.md
src/Part4_NeuralFX/036a_lstm-python/: README.md
src/Part4_NeuralFX/036b_lstm-torchscript/: CMakeLists.txt
src/Part4_NeuralFX/036c_lstm-wav/: CMakeLists.txt  README.md  my_lstm.pt
src/Part4_NeuralFX/036d_lstm-performance/: CMakeLists.txt  README.md
src/Part4_NeuralFX/036d_lstm-performance/python_src/: 1-lstm-diff-sizes.py
src/Part4_NeuralFX/036d_lstm-performance/src/: main.cpp
src/Part4_NeuralFX/036e_lstm-blocks/: README.md
src/Part4_NeuralFX/036f_lstm-blocks-memory/: CMakeLists.txt  README.md  my_lstm.pt  my_lstm_no_state.pt
src/Part4_NeuralFX/037a_train_lstm/: CMakeLists.txt  CMakeLists_RTNEURAL.txt  README.md
src/Part4_NeuralFX/037a_train_lstm/python/: export.py  myk_data.py  myk_evaluate.py  myk_loss.py  myk_models.py  myk_train.py  train.py
src/Part4_NeuralFX/037a_train_lstm/src/: main.cpp
src/Part4_NeuralFX/037d_lstm-rtneural/: CMakeLists.txt  README.md  requirements.txt
src/Part4_NeuralFX/037d_lstm-rtneural/python/: exporter.py  performance.py
src/Part4_NeuralFX/037d_lstm-rtneural/src/: main_rtneural_basic.cpp  main_torchscript_vs_rtneural.cpp  performance_test.cpp
src/Part4_NeuralFX/038a_neural_conv_steinmetz/: CMakeLists.txt  README.md
src/Part4_NeuralFX/038a_neural_conv_steinmetz/models/: traced_reverb.pt  traced_reverb_177778.pt  traced_reverb_88889.pt
src/Part4_NeuralFX/038a_neural_conv_steinmetz/python/: models.py  save_script_model.py  test_input_size.py  test_models.py
src/Part4_NeuralFX/038a_neural_conv_steinmetz/src/: main.cpp  main_block.cpp  tinywav_help.h
src/Part4_NeuralFX/038a_neural_conv_steinmetz/src/tinywav/: tinywav.h
src/TestTools/AudioPluginHost/: CMakeLists.txt  README.md
src/TestTools/MykScope/: CMakeLists.txt
src/TestTools/MykScope/src/: FreqScopeComponent.cpp  FreqScopeComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TimeScopeComponent.cpp  TimeScopeComponent.h
(+251 files in other folders)
